# assignments-of-games101

./: CMakeLists.txt  README.md
3rd/: CMakeLists.txt
assignment-1/: CMakeLists.txt  main.cpp
assignment-2/: CMakeLists.txt  main.cpp  rasterizer.cpp
assignments/: CMakeLists.txt
assignments/assignment-1/: CMakeLists.txt
assignments/assignment-1/include/: Triangle.hpp
assignments/assignment-1/src/: main.cpp
